h5 run parameter enhanced, stylings